--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.DetailsActivity">
+    tools:context=".ui.activities.DetailsActivity">
 
     <TextView
         android:layout_marginTop="15dp"
