--- a/app/src/main/res/layout/fragment_images_of_cats.xml
+++ b/app/src/main/res/layout/fragment_images_of_cats.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.cats.fragments.ImagesOfCatsFragment">
+    tools:context=".ui.activities.fragments.ImagesOfCatsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginLeft="20dp"
